    o formatParamVar: fix warning when multiple 'paramGroupVar'
    o getGLPGShapePalettePatientProfile
    o getPageVar: fix for plot with multiple lines
    o fix to remove warning: 'Coordinate system already present.'
    o subjectProfileLinePlot: fix to remove warning: 'geom_path: Each group consists of only one observation'
    o additional messages for verbose
0.1.0
    o example datasets moved to the glpgUtilityFct package
    o getGLPGColorPalettePatientProfile/getGLPGLinetypePalettePatientProfile
0.0.16
    o subjectProfileTextPlot: concatenate multiple value variable with ', '
    o subjectProfileIntervalPlot: timeLabel
    o subjectProfile[Interval|Event|Line]Plot: use GLPG color palette if no color variable is specified
0.0.15
    o changes for glpgUtilityFct version 0.0.3
    o subjectProfile[Event|Interval]Plot: paramVarSep, by default ' - ' instead of ' '
    o getNLinesYGgplot: add space for subject profile event and interval
    o formatParamVar: fix when empty string in paramVar
0.0.14
    o createSubjectProfileReport: add subjectSubset[Data|Var|Value] parameters
    o child document: remove space and file separator for file name of exported image, include shiny progress message for each patient
    o formatParamVar: fix in case similar levels with space difference
0.0.13
    o remove knitPrintListPlotsKnitr function
    o include tests for each subjectProfile[*]Plot function with vdiffr package
0.0.12
    o include directly plots in report
    o getPageVar/countNLines: fix when variable contains missing value
    o subjectProfileTextPlot: wrap text in panel across multiple lines (formatParamVarTextPlot new function)
    o getNLinesYGgplot: fix for text plot + increase size for text
    o report: fix for margins and landscape layout
0.0.11
    o subjectProfileTextPlot: fix in case subjectVar same as paramNameVar/paramValueVar
0.0.10
    o externalise the functions getPatient[Color|Shape]Palette, and data function in glpgUtilityFct
0.0.9