@@ -32,8 +32,11 @@ importFrom(glpgUtilityFct,getGLPGColorPalette)
 importFrom(glpgUtilityFct,getGLPGLinetypePalette)
 importFrom(glpgUtilityFct,getGLPGShapePalette)
 importFrom(glpgUtilityFct,getLabelVar)
-importFrom(grDevices,dev.off)
+importFrom(grDevices,graphics.off)
 importFrom(grid,convertX)
+importFrom(parallel,makeCluster)
+importFrom(parallel,parSapply)
+importFrom(parallel,stopCluster)
 importFrom(plyr,daply)
 importFrom(plyr,ddply)
 importFrom(plyr,dlply)
